--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             </label>
             <input type="button" name="print" value="Отправить">
         </form>
+        <div id="txt"></div>
     </div>
     <div class="content">
         <img src="" id="png" alt="">
     </div>
-    <div id="txt"></div>
+
 </main>
+<footer class="footer">Copyright 2020</footer>
 </body>
 <script src="script.js"></script>
 </html>
