--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </label>
             <input type="button" name="print" value="Отправить">
         </form>
-        <div id="txt"></div>
+       <!-- <div id="txt"></div>-->
+        <a href="" id="txt"></a>
     </div>
     <div class="content">
         <img src="" id="png" alt="">
