--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
 </main>
-<footer class="footer">Copyright 2020</footer>
+<footer class="footer">RRV 2020</footer>
 </body>
 <script src="script.js"></script>
 </html>
