--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </div>
 <main class="main">
     <div class="aside">
-        <form name="formDate">
+        <form class="form" name="formDate">
             <label for="date">Выбрать дату:
                 <input type="date" id="date" name="date">
             </label>
-            <input type="button" name="print" value="Отправить">
+            <input class="btn" type="button" name="print" value="Отправить">
         </form>
        <!-- <div id="txt"></div>-->
         <a href="" id="txt"></a>
