list and draw png

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </div>
 <main class="main">
     <div class="aside">
-        <form class="form" name="formDate">
-            <label for="date">Выбрать дату:
+        <form class="aside-form" name="formDate">
+            <label for="date">
                 <input type="date" id="date" name="date">
             </label>
-            <input class="btn" type="button" name="print" value="Отправить">
+            <input class="btn" type="button" name="print" value="Выбрать">
         </form>
        <!-- <div id="txt"></div>-->
-        <a href="" id="txt"></a>
+        <a href="" class="aside-list"></a>
     </div>
     <div class="content">
         <img src="" id="png" alt="">
