--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <a href="" class="aside-list"></a>
     </div>
     <div class="content">
+        <div></div>
         <img src="" id="png" alt="">
+        <div></div>
     </div>
-
 </main>
 <footer class="footer">RRV 2020</footer>
 </body>
