--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
         <a href="" class="aside-list"></a>
     </div>
     <div class="content">
-        <div></div>
-        <img src="" id="png" alt="">
-        <div></div>
+        <div class="content-arrow">
+            <svg class="icon">
+                <use xlink:href="left.svg#icon-circle-left"></use>
+            </svg>
+        </div>
+        <img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" alt="">
+        <div class="content-arrow">
+            <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
+        </div>
     </div>
 </main>
 <footer class="footer">RRV 2020</footer>
