--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <use xlink:href="left.svg#icon-circle-left"></use>
             </svg>
         </div>
-        <img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" alt="">
+        <div class="content-arrow">
+            <img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">
+        </div>
         <div class="content-arrow">
             <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
         </div>
