--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </svg>
         </div>
         <div class="content-arrow">
-            <img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">
+            <!--<img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">-->
+            <img src="" id="png" width="600" height="400" alt="">
         </div>
         <div class="content-arrow">
             <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
