--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
             </label>
             <input class="btn" type="button" name="print" value="Выбрать">
         </form>
-       <!-- <div id="txt"></div>-->
-        <a href="" class="aside-list"></a>
+        <div id="aside"></div>
     </div>
     <div class="content">
-        <div class="content-arrow">
+        <div class="content-item content-arrow">
             <svg class="icon">
                 <use xlink:href="left.svg#icon-circle-left"></use>
             </svg>
         </div>
-        <div class="content-arrow">
+        <div class="content-item">
             <!--<img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">-->
             <img src="" id="png" width="600" height="400" alt="">
         </div>
-        <div class="content-arrow">
+        <div class="content-item content-arrow">
             <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
         </div>
     </div>
