--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="aside"></div>
     </div>
     <div class="content">
-        <div class="content-item content-arrow">
+        <div class="content-item content-arrow prev">
             <svg class="icon">
                 <use xlink:href="left.svg#icon-circle-left"></use>
             </svg>
@@ -29,7 +29,7 @@
             <!--<img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">-->
             <img src="" id="png" width="600" height="400" alt="">
         </div>
-        <div class="content-item content-arrow">
+        <div class="content-item content-arrow next">
             <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
         </div>
     </div>
