--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </label>
             <input class="btn" type="button" name="print" value="Выбрать">
         </form>
-        <div id="aside"></div>
+        <div class="aside-list" id="aside"></div>
     </div>
     <div class="content">
         <div class="content-item content-arrow prev">
