--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <div class="header">
-    <div class="header__logo">CADI</div>
+    <div class="header__logo" onclick="startPage()">CADI</div>
+    <div class="header__logo-title">Start page</div>
 </div>
 <main class="main">
     <div class="aside">
@@ -26,8 +27,8 @@
             </svg>
         </div>
         <div class="content-item">
-            <img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">
-           <!-- <img src="" id="png" width="600" height="400" alt="">-->
+            <!--<img src="https://ip-2-165.unn.ru:3389/cadi/latest.png" id="png" width="600" height="400" alt="">-->
+            <img src="" id="png" width="600" height="400" alt="">
         </div>
         <div class="content-item content-arrow next">
             <svg class="icon icon-circle-right"><use xlink:href="right.svg#icon-circle-right"></use></svg>
